Event handling in vue.js

--- a/index.html
+++ b/index.html
@@ -2,12 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>g
+    <title>Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <div id="app">
-     <h1> {{product}}</h1>
- </div>
+<div class="nav-bar"></div>
+<div id="app">
+    <div class="product">
+        <div class="product-image">
+            <a v-bind:href="link">  <img :src="image" alt=""> </a>
+        </div>
+        <div class="product-info">
+            <h1> {{product}}</h1>
+            <p v-if="inventory>  10"> In Stock </p>
+            <p v-else-if="inventory <=10 && inventory > 0"> Almost sold out  </p>
+            <p v-show="onSale"> on Sale </p>
+            <p v-else> Out of the stock </p>
+
+            <ul>
+                <li v-for="detail in details"> {{ detail }}</li>
+            </ul>
+            <div v-for="variant in variants" :key="variant.variantId">
+                <p v-on:mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p>
+
+            </div>
+
+            <button v-on:click="addToCart"> Add to Cart </button>
+            <div class="cart">
+                <p>Cart ({{ cart }})</p>
+            </div>
+        </div>
+    </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="main.js"></script>
 </body>
