--- a/index.html
+++ b/index.html
@@ -13,25 +13,19 @@
             <a v-bind:href="link"> <img :src="image" alt=""> </a>
         </div>
         <div class="product-info">
-            <h1> {{product}}</h1>
-            <p v-if="inventory>  10"> In Stock </p>
-            <p v-else-if="inventory <=10 && inventory > 0"> Almost sold out </p>
-            <p v-show="onSale"> on Sale </p>
-            <p v-else
-               :class="{ outOfStock: !inStock}"> Out of the stock
-            </p>
-
-            <p :class="{ outOfStock: !inStock}"> Out of the stock
+            <h1> {{title}}</h1>
+            <p v-if="inStock"> In Stock </p>
+            <p v-else :class="{ outOfStock: !inStock}"> Out of the stock
             </p>
 
             <ul>
                 <li v-for="detail in details"> {{ detail }}</li>
             </ul>
-            <div v-for="variant in variants"
+            <div v-for="(variant,index) in variants"
                  :key="variant.variantId"
                  class="color-box"
                  :style="{backgroundColor: variant.variantColor}"
-                 @mouseover="updateProduct(variant.variantImage)">
+                 @mouseover="updateProduct(index)">
                 <!--                <p v-on:mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p>-->
             </div>
 
