--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <div class="nav-bar"></div>
 <div id="app">
     <div class="cart">
-        <p>Cart ({{ cart }})</p>
+        <p>Cart ({{ cart.length }})</p>
     </div>
-    <product :premium="premium" @add-to-cart="updateCart"></product>
+    <product :premium="premium" @add-to-cart="updateCart" @remove-from-cart="deleteCart"></product>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="main.js"></script>
